[package]
name = "filecounter"
description = "Command line tool to count files"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Parse command line argument by defining a struct
# https://github.com/clap-rs/clap/
clap = { version = "4.5", features = ["derive"] }

# Recursively walk a directory
# https://crates.io/crates/walkdir
walkdir = "2.5"

[dev-dependencies]

# Test CLI Applications
# https://crates.io/crates/assert_cmd
assert_cmd = "2.1"

[[bin]]
name = "filecounter"
path = "src/main.rs"
